Added tracking code and COI

--- a/all-vpr-web/css/src/sass/vpr.sass
+++ b/all-vpr-web/css/src/sass/vpr.sass
@@ -23,9 +23,11 @@ a
     padding: 0.5em 1em
     display: inline-block
     margin: 5px
+    margin-left: 0px
     border-style: outset
     border-width: 2px
     border-color: $dk_grey
+    font-weight: 600 
   &:hover
     .bbb
       color: $dk_blue
