research net finished

--- a/all-vpr-web/css/src/sass/vpr.sass
+++ b/all-vpr-web/css/src/sass/vpr.sass
@@ -3,9 +3,10 @@ $dk_blue: #002F6C
 $lt_grey: #dadada
 $dk_grey: #666666
 
-img, iframe
+img, iframe, video
   max-width: 100%
-
+  display: block
+  
 .site-logo
   max-width: 180px
 
