Onboarding worked on

--- a/all-vpr-web/css/src/sass/vpr.sass
+++ b/all-vpr-web/css/src/sass/vpr.sass
@@ -202,6 +202,15 @@ ul.grey-info-list
   li:nth-child(odd)
     clear: both
     
+.onboarding-info
+  margin-left: 25px 
+  h4:first-child
+    margin-top: 7px
+    margin-bottom: 7px
+  h4
+    margin-top: 14px
+    margin-bottom: 7px 
+    
 .headshot
   float: left
   padding-right: 20px
