onboarding page initial content

--- a/all-vpr-web/css/src/sass/vpr.sass
+++ b/all-vpr-web/css/src/sass/vpr.sass
@@ -181,6 +181,14 @@ a
 .vpr-callout
   margin-top: 5px
 
+h5.vpr-callout
+    font-family: "franklin-gothic-urw", "arial", sans-serif
+    font-weight: 400
+    text-transform: uppercase
+    font-size: 1.375em
+    line-height: 1.1em
+    border-bottom: 2px solid #eb5f0c
+  
 ul.grey-info-list 
   list-style-type: none
   padding-left: 0px
